stringToValue